--- a/.github/workflows/serve-ximera.yml
+++ b/.github/workflows/serve-ximera.yml
@@ -51,6 +51,7 @@ jobs:
           XIMERA_NAME: ${{ vars.XIMERA_NAME }}*${{ github.ref_name }}
         run: |
           ls -alrt
+          chmod +x xmScripts/xmlatex   # Overleaf sync might reset it :-()
           ./xmScripts/xmlatex ghaction
           echo "✅ Published to $XIMERA_URL$XIMERA_NAME " >> $GITHUB_STEP_SUMMARY
 
@@ -87,6 +88,7 @@ jobs:
           XIMERA_URL: ${{ vars.XIMERA_URL }}
           XIMERA_NAME: ${{ vars.XIMERA_NAME }}
         run: |
+          chmod +x xmScripts/xmlatex # Overleaf sync might reset it :-()
           ./xmScripts/xmlatex name         
           ./xmScripts/xmlatex serve -f  # NOTE: -f  should not be needed ...        
           echo "✅ Published to $XIMERA_URL$XIMERA_NAME " >> $GITHUB_STEP_SUMMARY
